--- a/lib/dune
+++ b/lib/dune
@@ -1,6 +1,7 @@
 (library
   (package rhul)
  (name rhul)
+ (preprocess (pps ppx_let))
  (libraries core
               core_unix
               core_unix.sys_unix
