--- a/rh_backlight/lib/dune
+++ b/rh_backlight/lib/dune
@@ -1,7 +1,8 @@
 (library
  (name backlight)
- (preprocess (pps ppx_let))
- (libraries core
+ (preprocess (pps ppx_let ppx_deriving.show ppx_sexp_conv))
+ (libraries rhul
+            core
             core_unix
             core_unix.sys_unix
             core_unix.filename_unix))
