--- a/rhul.opam
+++ b/rhul.opam
@@ -16,6 +16,7 @@ depends: [
   "ocp-indent" {with-dev-setup}
   "merlin" {with-dev-setup}
   "ocaml-lsp-server" {with-dev-setup}
+  "alcotest" {"1.9.1" >= with-test}
   "odoc" {with-doc}
 ]
 build: [
