--- a/lib/dune
+++ b/lib/dune
@@ -1,8 +1,6 @@
 (library
-  (package rhul)
+ (package rhul)
  (name rhul)
- (preprocess (pps ppx_let ppx_deriving.show))
- (libraries core
-              core_unix
-              core_unix.sys_unix
-              ))
+ (preprocess
+  (pps ppx_let ppx_deriving.show))
+ (libraries core core_unix core_unix.sys_unix))
