--- a/rh_backlight/commands/dune
+++ b/rh_backlight/commands/dune
@@ -1,6 +1,3 @@
 (library
  (name commands)
- (libraries rhul
-            backlight
-            core
-            cmdliner))
+ (libraries rhul backlight core cmdliner))
