--- a/rh-backlight.opam
+++ b/rh-backlight.opam
@@ -11,6 +11,9 @@ bug-reports: "https://gitlab.com/rhd0x7C3/rhul/-/issues"
 depends: [
   "dune" {>= "3.20"}
   "ocaml" {>= "5.4.0"}
+  "cmdliner" {>= "2.1.0"}
+  "ppx_deriving" {>= "6.1.1"}
+  "alcotest" {with-test}
   "odoc" {with-doc}
 ]
 build: [
