--- a/rhul.opam
+++ b/rhul.opam
@@ -11,12 +11,15 @@ bug-reports: "https://gitlab.com/rhd0x7C3/rhul/-/issues"
 depends: [
   "dune" {>= "3.20"}
   "ocaml" {>= "5.4.0"}
+  "core" {>= "0.17.1"}
+  "core_unix" {>= "0.17.1"}
+  "ppx_deriving" {>= "6.1.1"}
   "utop" {with-dev-setup}
   "ocamlformat" {with-dev-setup}
   "ocp-indent" {with-dev-setup}
   "merlin" {with-dev-setup}
   "ocaml-lsp-server" {with-dev-setup}
-  "alcotest" {"1.9.1" >= with-test}
+  "alcotest" {with-test}
   "odoc" {with-doc}
 ]
 build: [
